--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.12.7
 click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
+Faker==17.6.0
 fastapi==0.92.0
 h11==0.14.0
 httpcore==0.16.3
@@ -14,10 +15,12 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 orjson==3.8.7
 pydantic==1.10.5
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.25.0
 typing_extensions==4.5.0
